<resources>
    <string name="app_name" translatable="false">Auto Expreso</string>
    <string name="action_settings">Settings</string>
    <string name="valorar">Valorar</string>
    <string name="compartir">Compartir</string>
    <string name="donar">Donar</string>
    <string name="comentarios">Enviar comentarios</string>
    <string name="info">Acerca de esta aplicación</string>
    <string name="cerrar">Cerrar</string>
    <string name="sinconecion">No esta conectado al internet</string>
    <string name="reintentar">Reintentar</string>
    <string name="valorar_title">Valorar aplicación</string>
    <string name="valorar_set_message">Si te ha gustado la aplicación, ¿Te importaría valorar la aplicación?
        No te llevará más de un minuto. ¡Gracias por tu apoyo!</string>
    <string name="no_gracias">¡NO, GRACIAS!</string>
    <string name="valorar_ahora">VALORAR AHORA</string>
    <string name="reload">Reload</string>
    <string name="zoom">Zoom</string>
    <string name="email">Contactar al desarrollador</string>
    <string name="reports_bugs">Reportar errores</string>
    <string name="prueba">Prueba</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="slidemenu">Menu</string>
    <string name="desarrollador">Acerca del desarrollador</string>
    <string name="contactProg">Contactar al desarrollador</string>
    <string name="comunicacion">Comunicación</string>
    <string name="bugs">Bugs</string>
    <string name="reportarbugs">Reportar fallos</string>
    <string name="version"> Versión: </string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="email_leroy">info@leroy-ortiz.com</string>
    <string name="descripcion_del_error">Indique marca, modelo de celular y una pequeña descripción del error.</string>
    <string name="cuerpo_del_mensaje"></string>
    <string name="verifique_su_conexion_y_verifique_de_nuevo">Verifique su conexión e intente de nuevo.</string>
    <string name="sin_conexion">Sin Conexion</string>
    <string name="refrescar">Refrescar</string>
    <string name="para">Para:</string>


</resources>
