<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    app:navigationContentDescription="@string/app_name"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:title="Main Page"
    android:gravity="center">

    <item android:id="@+id/rate"
        android:icon="@drawable/ic_favorite"
        android:title="@string/valorar"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/compartir"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/slidemenu"
        android:icon="@drawable/ic_white_menu"
        android:title="@string/slidemenu"
        android:visible="true"
        app:showAsAction="ifRoom"/>

</menu>