<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fabMenu_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="480dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="80dp"
        app:fab_addButtonColorNormal="@color/colorPrimaryDark"
        app:fab_addButtonColorPressed="@color/halfGreen"
        app:fab_addButtonPlusIconColor="@color/white"
        app:fab_labelStyle="@style/custom_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCerrarMini_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_icon="@drawable/ic_power"
            app:fab_size="mini"
            app:fab_title="@string/cerrar" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEnableZoom_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_icon="@drawable/zoom"
            app:fab_size="mini"
            app:fab_title="@string/zoom" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabReloadrMini_ID"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="@color/colorAccent"
            app:fab_icon="@drawable/ic_refresh"
            app:fab_size="mini"
            app:fab_title="@string/reload" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.constraint.ConstraintLayout>