<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:background="@android:color/transparent"
    tools:context=".SlideMenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="125dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/botonTrasparente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView

            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ic_donar"
            android:layout_marginStart="@dimen/standard_20"
            android:contentDescription="@string/donar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:layout_marginStart="@dimen/standard_25"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="@dimen/standard_20"/>

        <View
            android:layout_height="2dp"
            android:layout_width="wrap_content"
            android:background="#979797" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:orientation="vertical"
            android:background="@color/white">


            <LinearLayout
                android:id="@+id/infoClick"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:orientation="horizontal"
                android:background="@color/trasparent"
                android:layout_marginTop="@dimen/standard_10">

                <ImageButton
                    android:contentDescription="@string/cerrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_info"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="top|center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:textColor="@color/black"
                    android:text="@string/info"
                    android:layout_marginStart="15sp"
                    android:textStyle="normal"
                    android:textSize="15sp"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/sobreProg"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:orientation="horizontal"
                android:background="@color/trasparent"
                android:layout_marginTop="@dimen/standard_5">

                <ImageButton
                    android:contentDescription="@string/cerrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_info"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="15dp"
                    android:layout_gravity="top|center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:textColor="@color/black"
                    android:text="@string/info"
                    android:layout_marginStart="15sp"
                    android:textStyle="normal"
                    android:textSize="15sp"
                    />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>